--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = warnet
 	url = https://github.com/carlaKC/warnet
 	branch = attackathon
+[submodule "sim-ln"]
+	path = sim-ln
+	url = https://github.com/carlakc/sim-ln
+	branch = attackathon
